--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +34,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "<div align=\"center\">\r   <h1 style=\"color:#ffcc00; font-size: 36px;\">🃏 Welcome to The Newgrounds Card Clash! 🃏</h1>\r </div>",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/almograz1/newgrounds-cards-clash.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/almograz1/newgrounds-cards-clash/issues"
+  },
+  "homepage": "https://github.com/almograz1/newgrounds-cards-clash#readme"
 }
